correct sticky header jump

--- a/src/assets/scss/boldgrid/_margin-fix.scss
+++ b/src/assets/scss/boldgrid/_margin-fix.scss
@@ -1,4 +1,4 @@
-.bgtfw-header {
+.bgtfw-header, .bgtfw-sticky-header {
 	&.template-header {
 		.boldgrid-section {
 			.container {
